compiler/testData/diagnostics/tests/deprecated/propertyWithInvoke.kt
@Deprecated("No")
konst f: () -> Unit = {}

fun test() {
    <!DEPRECATION!>f<!>()
}
